codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_oauth_browser_error.snap
---
source: tui/src/chatwidget/tests/mcp_picker.rs
assertion_line: 368
expression: rendered
---
  Authenticating sentry…
  Failed to open browser: simulated opener failure


› 1. Open browser again
  2. Close

  Enter Select  Esc Close
