codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_oauth_busy.snap
---
source: tui/src/chatwidget/tests/mcp_picker.rs
assertion_line: 412
expression: "render_bottom_popup(&chat, 80)"
---
  Already authenticating sentry…
  Complete the current sign-in before starting another.


› 1. Close

  Enter Close  Esc Close
