codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_oauth_error.snap
---
source: tui/src/chatwidget/tests/mcp_picker.rs
assertion_line: 369
expression: rendered
---
  Authentication failed · sentry
  request failed at [REDACTED] then [REDACTED] and [REDACTED]


› 1. Retry
  2. Close

  Enter Select  Esc Close
