codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_oauth_progress.snap
---
source: tui/src/chatwidget/tests/mcp_picker.rs
assertion_line: 343
expression: rendered
---
  Authenticating sentry…
  Complete sign-in in your browser, then return here.


› 1. Open browser again
  2. Close

  Enter Select  Esc Close
