codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_oauth_refresh_error.snap
---
source: tui/src/chatwidget/tests/mcp_picker.rs
assertion_line: 541
expression: rendered
---
  MCP reconnect failed · sentry
  Authentication succeeded, but reconnecting failed. Restart may be needed.


› 1. Retry
  2. Close

  Enter Select  Esc Close
