codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_picker_empty_inventory.snap
---
source: tui/src/chatwidget/tests/mcp_picker.rs
assertion_line: 110
expression: "render_bottom_popup(&chat, 80)"
---
  MCP servers
  No MCP servers configured.


›    See the Codex documentation to configure MCP servers.

  Esc Close
