codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_picker_loading.snap
---
source: tui/src/chatwidget/tests/mcp_picker.rs
assertion_line: 83
expression: "render_bottom_popup(&chat, 80)"
---
  MCP servers


›    Loading MCP inventory…

  Esc Close
