codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_picker_narrow_width.snap
---
source: tui/src/chatwidget/tests/mcp_picker.rs
assertion_line: 156
expression: rendered
---
  MCP servers


› 1. ✓ alpha-connected   2 tools
  2. ! middle-auth       Needs auth…
  3. × zeta-unavailable  Unavailabl…

  ↑↓ Navigate  Enter Details  Esc
  Close
